feat(app): implement CreateStatementsApp composition root for CREASTMT.JCL
Translate app/jcl/CREASTMT.JCL — the 5-step statement-generation job —
into a single Java 25 composition root that orchestrates the five
phases end-to-end before invoking the CBSTM03A statement engine
(app/cbl/CBSTM03A.CBL).

PHASES IMPLEMENTED
  • DELDEF01 — IDCAMS DELETE+DEFINE TRXFL.VSAM.KSDS
        (key 32,0 / record 350 / CISZ 4096); written as a .schema
        sidecar in the file-based runtime (AAP §0.6.12).
  • STEP010 — PGM=SORT FIELDS=(263,16,CH,A,1,16,CH,A) with
        OUTREC FIELDS=(1:263,16, 17:1,262, 279:279,50) producing
        328-byte sorted records (16 card-num + 262 original prefix
        + 50 unchanged suffix).
  • STEP020 — IDCAMS REPRO TRXFL.SEQ → TRXFL.VSAM.KSDS via
        Files.copy(REPLACE_EXISTING).
  • STEP030 — IEFBR14 DISP=(MOD,DELETE,DELETE) idempotent cleanup
        of prior STATEMNT.PS and STATEMNT.HTML.
  • STEP040 — invokes CbStm03A.run() with a CbStm03B file-services
        collaborator wired to the four input files (TRNXFILE/XREFFILE/
        CUSTFILE/ACCTFILE) and the two output paths (STMTFILE/HTMLFILE).

FAITHFUL TRANSLATION OF MALFORMED STMTFILE DD (AAP §0.7.1)
  Line 90 of CREASTMT.JCL contains garbled trailing tokens
  "00,RECFM=FB), ATA.VSAM.KSDS" after the SPACE= keyword — a
  copy/paste artefact. Per the AAP we DO NOT silently "fix" it:
    • Javadoc cites the verbatim malformed DD block
    • @CobolProgram notes records the bug
    • WARN log at startup announces the preserved bug
    • Valid intent only is translated (LRECL=80 RECFM=FB → STATEMNT.PS)

JAVA 25 FEATURES USED
  • import module java.base; (JEP 511 Final)
  • ScopedValue<BatchRunContext> BATCH_CTX (JEP 506 Final;
    moved from java.util.concurrent to java.lang at finalization)
  • Pattern-matching switch with type-pattern + guards for exit-code
    clamping in main() — no default branch (AAP §0.7.3)
  • java.nio.file end-to-end; no java.io.File in new code (AAP §0.6.5)
  • No 